Добавлена динамика и кеширование